# UILayoutVisualizationTool_public

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  xml可视化布局工具实现设计.md
UIWork/: FormFactory.cpp  FormFactory.h  UILib.cpp  UILib.h  UIWorkDef.h
UIWork/Actor/: ImageActor.cpp  ImageActor.h  LeaderActor.cpp  LeaderActor.h  ScrollBar.cpp  ScrollBar.h  TextActor.cpp  TextActor.h  VisualizationActor.cpp  VisualizationActor.h
UIWork/AttributePlug/: UIGravityPlug.h
UIWork/Form/: Form_Boot.cpp  Form_Boot.h  VisualizationForm.cpp  VisualizationForm.h
UIWork/Stage/: AbsoluteLayout.cpp  AbsoluteLayout.h  FrameLayout.cpp  FrameLayout.h  LinearLayout.cpp  LinearLayout.h  RelativeLayout.cpp  RelativeLayout.h  ScrollBarDecTurnPage.cpp  ScrollBarDecTurnPage.h  VisualizationStage.cpp  VisualizationStage.h
UIWork/res/Form/: Form_SearchResult.xml
UIWork/res/Skin1/layout/: CActorDropDownScrollBar.xml  CActorScrollBarNew.xml  CActorScrollBarRouteSelect.xml  CActorScrollbarInputMethod.xml  CActorScrollbarNewSort.xml  CActorScrollbarNewThirty.xml  CActorScrollbarRestore.xml  LayoutChargingMapPrefer_BackGround.xml  LayoutChargingMapPrefer_BtnThreeColFirst.xml  LayoutChargingMapPrefer_BtnThreeColSecond.xml  LayoutChargingMapPrefer_BtnThreeColThird.xml  LayoutChargingMapPrefer_BtnTwoColFirst.xml  LayoutChargingMapPrefer_BtnTwoColSecond.xml  LayoutChargingMapPrefer_Divider.xml  LayoutChargingMapPrefer_Title.xml  LayoutChargingSettingPrefer_BackGround.xml  LayoutChargingSettingPrefer_BtnTwoColFirstDown.xml  LayoutChargingSettingPrefer_BtnTwoColFirstMiddle.xml  LayoutChargingSettingPrefer_BtnTwoColFirstOnlyOne.xml  LayoutChargingSettingPrefer_BtnTwoColFirstUp.xml  LayoutChargingSettingPrefer_BtnTwoColSecondDown.xml  LayoutChargingSettingPrefer_BtnTwoColSecondMiddle.xml  LayoutChargingSettingPrefer_BtnTwoColSecondOnlyOne.xml  LayoutChargingSettingPrefer_BtnTwoColSecondUp.xml  LayoutChargingSettingPrefer_Title.xml  Layout_No_GuidanceView.xml  Layout_No_GuidanceView_limSpeed.xml  Layout_With_GuidanceView.xml  Layout_With_GuidanceView_limSpeed.xml  (+58 more)
UserInfo/: ReadMe  config.json  run.sh
main/: main.cpp
(+1455 files in other folders)
